css timeline view triangle on mobile bug fix

--- a/css/colorThemes/blackTheme.css
+++ b/css/colorThemes/blackTheme.css
@@ -133,9 +133,6 @@
 .cd-timeline__container::before {
     background: #909090;
 }
-.cd-timeline__content::before {
-    border-right: 7px solid #222;
-}
 .cd-timeline__sym {
     background-color: #222;
 }
@@ -164,6 +161,11 @@
     }
     .cd-timeline__block:nth-child(even) .cd-timeline__content::before {
         border-right-color: #222;
+    }
+}
+@media screen and (max-width: 767px) {
+    .cd-timeline__content::before {
+        border-right: 7px solid #222;
     }
 }
 /* ************************************************************************** */
