--- a/css/colorThemes/pinkTheme.css
+++ b/css/colorThemes/pinkTheme.css
@@ -134,9 +134,6 @@
 .cd-timeline__container::before {
     background: #df9ab7;
 }
-.cd-timeline__content::before {
-    border-right: 7px solid #d2477e;
-}
 .cd-timeline__sym {
     background-color: #d2477e;
 }
@@ -165,6 +162,11 @@
     }
     .cd-timeline__block:nth-child(even) .cd-timeline__content::before {
         border-right-color: #d2477e;
+    }
+}
+@media screen and (max-width: 767px) {
+    .cd-timeline__content::before {
+        border-right: 7px solid #d2477e;
     }
 }
 /* ************************************************************************** */
