--- a/css/colorThemes/purpleTheme.css
+++ b/css/colorThemes/purpleTheme.css
@@ -134,9 +134,6 @@
 .cd-timeline__container::before {
     background: #cd94da;
 }
-.cd-timeline__content::before {
-    border-right: 7px solid #ad3bc4;
-}
 .cd-timeline__sym {
     background-color: #ad3bc4;
 }
@@ -165,6 +162,11 @@
     }
     .cd-timeline__block:nth-child(even) .cd-timeline__content::before {
         border-right-color: #ad3bc4;
+    }
+}
+@media screen and (max-width: 767px) {
+    .cd-timeline__content::before {
+        border-right: 7px solid #ad3bc4;
     }
 }
 /* ************************************************************************** */
