--- a/css/colorThemes/yellowTheme.css
+++ b/css/colorThemes/yellowTheme.css
@@ -133,9 +133,6 @@
 .cd-timeline__container::before {
     background: #ffe782;
 }
-.cd-timeline__content::before {
-    border-right: 7px solid #ffc228;
-}
 .cd-timeline__sym {
     background-color: #ffc228;
 }
@@ -164,6 +161,11 @@
     }
     .cd-timeline__block:nth-child(even) .cd-timeline__content::before {
         border-right-color: #ffc228;
+    }
+}
+@media screen and (max-width: 767px) {
+    .cd-timeline__content::before {
+        border-right: 7px solid #ffc228;
     }
 }
 /* ************************************************************************** */
